[package]
name = "ibackupextractor"
description = "A simple tool for extracting files from iOS backup archive."
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1"
readonly = "0.2"
fallible-iterator = "0.2"
rusqlite = "0.29"
plist = "1"
console = "0.15"
indicatif = "0.17"
clap = { version = "4", features = ["derive"] }
