[package]
name = "ibackupextractor"
description = "A simple tool for extracting files from iOS backup archive."
version = "0.1.1"
edition = "2024"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1"
readonly = "0.2"
fallible-iterator = "0.3"
rusqlite = "0.37"
plist = "1"
console = "0.16"
indicatif = "0.18"
clap = { version = "4", features = ["derive"] }
